[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 正式环境直接退出程序，不打印错误栈
[profile.release]
panic = "abort"

[dependencies]
enigo = "0.2.0"
ferris-says = "0.2"
rand = "0.8.3"
rdev = "0.5.3"

winapi = {version = "0.3.9",features = ["winuser","windef","ntdef","basetsd",
"minwindef","libloaderapi","wingdi","windowsx","errhandlingapi"]}
[lib]
crate-type = ["cdylib"]
